--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <!-- <div id="menu">
+    <div id="menu">
       <div id="img_container">
-        <img src="/public/images/starrynight.jpg" alt="starry night">
+        <img src="images/starrynight.jpg" alt="starry night">
       </div>
       <div id="content">
         <h1>Art Gallery</h1>
@@ -26,7 +26,7 @@
           <p>Enter The Gallery</p>
         </div>
       </div>
-    </div> -->
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
